--- a/assets/web/style.css
+++ b/assets/web/style.css
@@ -3,6 +3,29 @@ html {
     font-family: 'Poppins', sans-serif;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
+}
+
+button {
+    display: block;
+    margin: 0 auto;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    width: 300px;
+    height: 300px;
+    border-radius: 400px;
+    background-color: #b0e0e6;
+    color: black;
+    border: none;
+    padding: 5%;
+}
+
+.grid {
+    text-align: center;
+}
+
+#result-div {
+    font-size:20px;
+    margin: 15px;
 }
